--- a/application/config/common.neon
+++ b/application/config/common.neon
@@ -5,6 +5,7 @@ application:
 
 session:
 	expiration: 14 days
+	savePath: %tempDir%/sessions
 
 extensions:
     console: Contributte\Console\DI\ConsoleExtension(%consoleMode%)
